@startuml domain-model
title CookingChallenge — Domain Model (DDD)

skinparam classAttributeIconSize 0
hide circle

note as N0
  Every aggregate root ID (AccountId, ChallengeId,
  ScoreSubmissionId, CookRivalryId, PlateColorId) is a
  TSID: BIGINT storage, Base32-encoded at the API boundary.
  See docs/backend/03-code-style.md#id-generation-tsid.
end note

package "auth" {
  class Account << (A,orange) AggregateRoot >> {
    id : AccountId
    email : String
    firstName : String
    lastName : String
    passwordHash : String
    roles : Set<SystemRole>
    --
    +grantRole(role : SystemRole)
    +revokeRole(role : SystemRole)
    +renameFirst(newFirstName : String)
    +renameLast(newLastName : String)
  }
  note bottom of Account
    Two ways an Account comes to exist: the host
    creates one directly (email + firstName/lastName,
    any SystemRole), or a person self-registers by
    scanning a QR an ORGANIZER/ADMIN generated for one
    specific Challenge (gated by a RegistrationInvite
    token — infrastructure-layer, like AccessLink, not
    modeled here) -> create(..., USER), no password,
    then added as a guest of that Challenge. Same
    factory either way; only the entry point and the
    guest side-effect differ. See frontend-prd.md §5.1.
    roles are *system permissions*, unrelated to
    whether this account is cooking or a guest
    in any particular Challenge (see below).
  end note

  enum SystemRole {
    ADMIN
    ORGANIZER
    USER
  }
  note bottom of SystemRole
    ADMIN: manage anything
    ORGANIZER: create challenges, assign cooks/guests, score
    USER: score only
  end note

  Account --> SystemRole
}

package "cookoff" {

  ' ---------- Aggregate Roots ----------

  class Challenge << (A,orange) AggregateRoot >> {
    id : ChallengeId
    date : LocalDate
    dishName : DishName
    status : ChallengeStatus
    createdBy : AccountId
    imageRef : String?
    lastRevealResult : AccountId?
    --
    +editParticipants(newCookAAccountId?, newCookBAccountId?, guestIdsToAdd[], guestIdsToRemove[])
    +pickColor(cookAccountId, chosenColorId, otherColorId)
    +changeImage(newImageRef)
    +canScore(accountId) : boolean
    +isOwnedBy(accountId) : boolean
    +reveal() : ChallengeRevealed
    +unreveal() : ChallengeUnrevealed
  }
  note bottom of Challenge
    "Cook" and "Guest" are not separate entities —
    they're the roles an Account plays *within this
    one Challenge*: cookAssignments picks the two
    cooking accounts (+ their blind label A/B + a
    PlateColor once picked), guestAccountIds lists the
    tasting accounts. The same Account could appear as
    a cook in one Challenge and a guest in another.

    canScore = guestAccountIds ∪ {createdBy} — the
    organizing account may score, cooks never can.

    editParticipants reassigning either cook clears
    BOTH cooks' picked colors (a pick is meaningless
    once the person behind label A/B changes) — the
    pair must pickColor again from scratch.

    pickColor is once-per-challenge-per-side: the
    first cook to pick assigns their own PlateColor
    AND the other cook's remaining one atomically, then
    locks — irreversible until editParticipants resets
    it. Every Challenge reserves the first 2 active
    PlateColors (by sortOrder) as its pickable pair.

    lastRevealResult mirrors what reveal() last
    published, so unreveal() knows exactly what to
    tell CookRivalry to undo (see ChallengeUnrevealed
    below) — cleared once reversed, repopulated by the
    next reveal().
  end note

  class ScoreSubmission << (A,orange) AggregateRoot >> {
    id : ScoreSubmissionId
    challengeId : ChallengeId
    guestAccountId : AccountId
    scores : List<Score>
    submittedAt : Instant
    --
    +submit(scores) : ScoreSubmission
  }
  note bottom of ScoreSubmission
    invariant: at most one submission per
    (challengeId, guestAccountId) — enforced by
    the repository/unique constraint.
  end note

  class CookRivalry << (A,orange) AggregateRoot >> {
    id : CookRivalryId
    cookAAccountId : AccountId
    cookBAccountId : AccountId
    cookAWins : int
    cookBWins : int
    draws : int
    totalChallenges : int
    --
    +recordResult(overallWinnerAccountId : AccountId?)
    +reverseResult(previousOverallWinnerAccountId : AccountId?)
  }
  note bottom of CookRivalry
    reverseResult is the exact inverse of recordResult
    (decrements the matching win/draw counter and
    totalChallenges) — consumed by ChallengeUnrevealed,
    the same way recordResult is consumed by
    ChallengeRevealed.
  end note

  class PlateColor << (A,orange) AggregateRoot >> {
    id : PlateColorId
    name : String
    hexCode : String
    sortOrder : int
    active : boolean
  }
  note bottom of PlateColor
    Admin-managed reference data, not a hardcoded
    enum — restyling the palette (or renaming a color)
    is a data change, not a code change. A Challenge
    always reserves the first 2 active PlateColors by
    sortOrder as the pair its two cooks pick between.
  end note

  ' ---------- Value Objects ----------

  class CookAssignment << (V,lightblue) ValueObject >> {
    accountId : AccountId
    label : DishLabel
    colorId : PlateColorId?
  }

  class DishName << (V,lightblue) ValueObject >> {
    value : String
  }

  class Score << (V,lightblue) ValueObject >> {
    dishLabel : DishLabel
    category : Category
    points : int
  }
  note bottom of Score
    invariant: 1 <= points <= 5 (star rating, no 0)
  end note

  class ChallengeResult << (V,lightblue) ValueObject >> {
    categoryWinners : Map<Category, DishLabel>
    overallWinnerAccountId : AccountId?
  }

  ' ---------- Enums ----------

  enum Category {
    MUNDGEFUEHL
    TELLERSPRACHE
    GESCHMACK
  }

  enum DishLabel {
    A
    B
  }

  enum ChallengeStatus {
    OPEN
    REVEALED
  }

  ' ---------- Domain Service ----------

  class ResultCalculator << (S,lightgreen) DomainService >> {
    +calculate(challenge : Challenge, submissions : List<ScoreSubmission>) : ChallengeResult
  }

  ' ---------- Domain Events ----------

  class ChallengeRevealed << (E,pink) DomainEvent >> {
    challengeId : ChallengeId
    cookAAccountId : AccountId
    cookBAccountId : AccountId
    overallWinnerAccountId : AccountId?
  }

  class ChallengeUnrevealed << (E,pink) DomainEvent >> {
    challengeId : ChallengeId
    previousOverallWinnerAccountId : AccountId?
  }
  note bottom of ChallengeUnrevealed
    Mirrors ChallengeRevealed's event-listener pattern
    (ChallengeRevealedRivalryUpdater) rather than
    Challenge calling CookRivalry directly — keeps
    "cross-aggregate updates go through an event +
    @TransactionalEventListener" as the one consistent
    mechanism in this module.
  end note

  ' ---------- Relationships ----------

  Challenge "1" *-- "2" CookAssignment
  Challenge "1" --> "1" DishName
  CookAssignment --> DishLabel
  CookAssignment --> PlateColor

  ScoreSubmission "*" --> "1" Challenge : challengeId >
  ScoreSubmission "1" *-- "6" Score

  Score --> Category
  Score --> DishLabel

  ResultCalculator ..> Challenge : reads
  ResultCalculator ..> ScoreSubmission : reads
  ResultCalculator ..> ChallengeResult : produces

  Challenge ..> ChallengeRevealed : emits on reveal()
  ChallengeRevealed ..> CookRivalry : updates (recordResult)

  Challenge ..> ChallengeUnrevealed : emits on unreveal()
  ChallengeUnrevealed ..> CookRivalry : updates (reverseResult)

  Challenge --> ChallengeStatus
}

' ---------- Cross-module references (by ID only) ----------

CookAssignment ..> Account : accountId >
Challenge ..> Account : guestAccountIds / createdBy >
ScoreSubmission ..> Account : guestAccountId >
CookRivalry ..> Account : cookAAccountId / cookBAccountId >

note as N1
  Every participant reference is a plain AccountId —
  there is no separate Cook/Guest aggregate. "Being a
  cook" or "being a guest" is contextual to one
  Challenge, not a standalone identity or a system
  permission. SystemRole (auth) and cookoff
  participation are two independent concerns.
end note

@enduml
